--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -25,7 +25,24 @@
         - 'fail2ban.service'
       failed_when: svc_test.changed
 
-    - name: Check ports
+    - name: Checking that services survive restart
+      ansible.builtin.systemd:
+        name: "{{ item }}"
+        state: restarted
+      loop:
+        - 'postfix.service'
+        - 'postfix@-.service'
+        - 'dovecot.service'
+        - 'nginx.service'
+        - 'mariadb@iredmail.service'
+        - 'amavis-mc.service'
+        - 'spamassassin.service'
+        - 'clamav-daemon.service'
+        - 'iredapd.service'
+        - 'iredadmin.service'
+        - 'fail2ban.service'
+
+    - name: Checking ports
       wait_for:
         port: "{{ item }}"
         timeout: 1
@@ -60,7 +77,6 @@
         - 3306  # mariadb
         - 9999  # php fpm
         - 783  # spamassassin
-      ]
 
     - debug:
         var: port_test
@@ -71,12 +87,12 @@
   tasks:
     - name: Checking if web-service is reachable
       ansible.builtin.uri:
-        url: "{{ item.url }}"
+        url: "{{ item.key }}"
         return_content: yes
         validate_certs: false
       register: page
-      failed_when: "'{{ item.content }}' not in page.content"
-      loop:
-        - {url: 'https://iredmail.lan', content: 'Roundcube Webmail'}
-        - {url: 'https://iredmail.lan/iredadmin', content: 'Login To Manage'}
-        - {url: 'http://iredmail.lan/.well-known/acme-challenge/test', content: '404 Not Found'}
+      failed_when: "'{{ item.value }}' not in page.content"
+      with_dict:
+        - {'https://iredmail.lan': 'Roundcube Webmail'}
+        - {'https://iredmail.lan/iredadmin': 'Login To Manage'}
+        - {'http://iredmail.lan/.well-known/acme-challenge/test': '404 Not Found'}
