--- a/tasks/debian/main.yml
+++ b/tasks/debian/main.yml
@@ -8,7 +8,9 @@
   ansible.builtin.lineinfile:
     dest: '/etc/hosts'
     regexp: '^127.0.1.1'
-    line: "127.0.1.1 {{ IRM_CONFIG.mailserver_sub_domain }}.{{ IRM_CONFIG.domain }} {% if IRM_CONFIG.mailserver_sub_domain != inventory_hostname %}{{ IRM_CONFIG.mailserver_sub_domain }} {% endif %}{{ inventory_hostname }} localhost"
+    line: "127.0.1.1 {{ IRM_CONFIG.mailserver_sub_domain }}.{{ IRM_CONFIG.domain }}
+    {% if IRM_CONFIG.mailserver_sub_domain != inventory_hostname %}{{ IRM_CONFIG.mailserver_sub_domain }} {% endif %}\
+    {{ inventory_hostname }} localhost"
     state: present
     backrefs: yes
 
