--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,11 +12,13 @@ galaxy_info:
       versions:
         - bullseye
   galaxy_tags:
-    - 'iRedMail'
-    - 'Postfix'
-    - 'Dovecot'
+    - 'iredmail'
+    - 'postfix'
+    - 'dovecot'
     - 'mailserver'
     - 'mailing'
-    - 'clamav'
+    - 'mailfilter'
+    - 'imap'
+    - 'webmail'
 
 collections: []
