--- a/defaults/main/4_nginx.yml
+++ b/defaults/main/4_nginx.yml
@@ -3,7 +3,7 @@
 # todo: additional security measurements for admin-interface(s)
 #   basic-auth, source-ip filter, ...
 defaults_irm_nginx:
-  domain: "{{ IRM_CONFIG.mailserver_sub_domain }}.{{ IRM_CONFIG.domain }}"
+  domain: "{{ IRM_CONFIG.fqdn }}"
   mode: 'serve'
   port_plain: 80
   port_ssl: 443
