--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,29 @@
 ---
 
+- name: iRedMail | Showing debug info - user provided config
+  ansible.builtin.debug:
+    var: iredmail
+  when:
+    - debug is defined
+    - debug
+
+- name: iRedMail | Showing debug info - running config
+  ansible.builtin.debug:
+    var: IRM_CONFIG
+  when:
+    - debug is defined
+    - debug
+
 - name: iRedMail | Checking config
   ansible.builtin.assert:
     that:
-      - IRM_CONFIG.domain is defined
-      - IRM_CONFIG.mailserver_sub_domain is defined
-      - IRM_CONFIG.mailserver_sub_domain + '.' + IRM_CONFIG.domain | valid_hostname
+      - IRM_CONFIG.fqdn is defined
+      - IRM_CONFIG.fqdn | valid_hostname
+
+- name: iRedMail | Setting domain
+  ansible.builtin.set_fact:
+    irm_domain: "{{ IRM_CONFIG.fqdn | remove_hostname }}"
+    irm_host_sub_domain: "{{ IRM_CONFIG.fqdn | get_subdomain }}"
 
 - name: iRedMail | Processing debian config
   ansible.builtin.import_tasks: debian/main.yml
