--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,6 +1,6 @@
 ---
 
-references:
+_references:
   docker:
     all: &docker_all
       docker_host: 'tcp://molecule-docker.local:2375'
@@ -19,22 +19,22 @@ dependency:
 driver:
   name: docker
 platforms:
-  - name: test-ag-iredmail-tester-${USER}
+  - name: test-ag-iredmail-tester
     docker_networks:
-      - name: 'test-ag-iredmail-${USER}'
+      - name: 'test-ag-iredmail'
         ipam_config:
           - subnet: '192.168.5.0/24'
             gateway: '192.168.5.254'
     networks:
-      - name: 'test-ag-iredmail-${USER}'
+      - name: 'test-ag-iredmail'
         ipv4_address: '192.168.5.1'
     etc_hosts: {iredmail.test.ansibleguy.net: '192.168.5.2'}
     groups: [grp_tester]
     <<: *docker_all
 
-  - name: test-ag-iredmail-1-${USER}
+  - name: test-ag-iredmail-1
     networks:
-      - name: 'test-ag-iredmail-${USER}'
+      - name: 'test-ag-iredmail'
         ipv4_address: '192.168.5.2'
     groups: [grp_targets]
     <<: *docker_all
